add-get-the-app-image

--- a/index.html
+++ b/index.html
@@ -116,9 +116,12 @@
         <a href="#" class="forgot-password">Forgot password?</a>
     </div>
 </div>
-<div class="app-download">
-    <img src="app-store.png" alt="App Store">
-    <img src="google-play.png" alt="Google Play">
+<div class="get-app">
+    <p>Get the app</p>
+    <div class="app-download">
+        <img src="img/apple-store.webp" alt="App Store">
+        <img src="img/google-playstore.webp" alt="Google Play">
+    </div>
 </div>
 <div class="footer">
     <a href="#">Meta</a>
