--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 50px;
+            margin-top: 150px;
         }
         .left-panel {
             position: relative;
@@ -62,8 +62,6 @@
             30%, 100% { opacity: 0; }
         }
 
-
-
         .right-panel {
             width: 350px;
             border: 1px solid #dbdbdb;
@@ -98,6 +96,12 @@
             justify-content: center;
             align-items: center;
         }
+
+        #insta-text-image {
+            width: 180px;
+            margin: 40px 0 20px 0;
+        }
+
         .separator {
             margin: 20px 0;
             display: flex;
@@ -127,7 +131,7 @@
             margin: 5px;
         }
         .footer {
-            margin-top: 50px;
+            margin-top: 120px;
             font-size: 12px;
             color: #8e8e8e;
             text-align: center;
@@ -136,6 +140,12 @@
             color: #8e8e8e;
             text-decoration: none;
             margin: 0 5px;
+        }
+        
+        @media screen and (max-width: 875px) {
+            .left-panel{
+                display: none;
+            }
         }
 
     </style>
@@ -151,9 +161,12 @@
     </div>
     <div class="right-side">
         <div class="right-panel">
-            <h1 style="font-family: 'Billabong', cursive; font-size: 40px;">Instagram</h1>
-            <input type="text" placeholder="Phone number, username, or email">
-            <input type="password" placeholder="Password">
+            <div>
+                <img src="./img/instagram.png" alt="" id="insta-text-image">
+            </div>
+<!--            <h1 style="font-family: 'Billabong', cursive; font-size: 40px;">Instagram</h1>-->
+            <input type="text" placeholder="Phone number, username, or email" class="fs-6">
+            <input type="password" placeholder="Password" class="fs-6">
             <button>Log in</button>
             <div class="separator">
                 <hr>
@@ -193,6 +206,7 @@
     <a href="#">Threads</a>
     <a href="#">Contact Uploading & Non-Users</a>
     <a href="#">Meta Verified</a>
+    <br><br>
     <p>&copy; 2025 Instagram from Meta</p>
 </div>
 </body>
