--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="./main.js"></script>
     <style>
+        :root {
+            --bg-color: white;
+            --text-color: black;
+        }
+
+        .dark-mode {
+            --bg-color: #121212;
+            --text-color: white;
+        }
+
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #fff;
-            color: #000;
+            /*background-color: #fff;*/
+            /*color: #000;*/
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -24,13 +38,14 @@
             align-items: center;
             margin-top: 150px;
         }
+
+        #chk-mode {
+        }
+
         .left-panel {
             position: relative;
         }
 
-        /*.left-panel img {
-            width: 400px;
-        }*/
 
         .background-img {
             height: 550px;
@@ -60,6 +75,10 @@
         @keyframes fade {
             0%, 25% { opacity: 1; }
             30%, 100% { opacity: 0; }
+        }
+
+        #insta-text-image {
+            content: url("/img/instagram.png");
         }
 
         .right-panel {
@@ -97,6 +116,10 @@
             align-items: center;
         }
 
+        .login-input {
+            font-size: 13px;
+        }
+
         #insta-text-image {
             width: 180px;
             margin: 40px 0 20px 0;
@@ -117,6 +140,10 @@
             margin: 0 10px;
             font-size: 12px;
             color: #8e8e8e;
+        }
+
+        .facebook-login {
+            color: #0081f6 !important;
         }
         .facebook-login img {
             width: 18px;
@@ -141,6 +168,32 @@
             text-decoration: none;
             margin: 0 5px;
         }
+
+        @media (prefers-color-scheme: dark){
+            #insta-text-image {
+                content: url("/img/instagram-dark.png");
+            }
+
+            .right-panel {
+                background-color: #000000;
+                border-color: #3e3e3e;
+            }
+
+            .login-input {
+                background-color: #121212 !important;
+                border-color: #3e3e3e !important;
+            }
+
+            .forgot-password {
+                color: #cccccc;
+                text-decoration: none;
+            }
+
+            .separator span a {
+                color: #0095f6 !important;
+            }
+
+        }
         
         @media screen and (max-width: 875px) {
             .left-panel{
@@ -151,46 +204,50 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="left-panel me-4">
-        <img src="./img/insta-phone.png" class="background-img" alt="Instagram Preview">
-        <img src="./img/wallpaper1.png" class="top-img" alt="Instagram Preview">
-        <img src="./img/wallpaper2.png" class="top-img" alt="Instagram Preview">
-        <img src="./img/wallpaper3.png" class="top-img" alt="Instagram Preview">
-        <img src="./img/wallpaper4.png" class="top-img" alt="Instagram Preview">
+<header>
+    <input id="chk-mode" class="form-check-input" type="checkbox" role="switch">
+</header>
+<main>
+    <div class="container">
+        <div class="left-panel me-4">
+            <img src="./img/insta-phone.png" class="background-img" alt="Instagram Preview">
+            <img src="./img/wallpaper1.png" class="top-img" alt="Instagram Preview">
+            <img src="./img/wallpaper2.png" class="top-img" alt="Instagram Preview">
+            <img src="./img/wallpaper3.png" class="top-img" alt="Instagram Preview">
+            <img src="./img/wallpaper4.png" class="top-img" alt="Instagram Preview">
+        </div>
+        <div class="right-side">
+            <div class="right-panel">
+                <div>
+                    <img id="insta-text-image">
+                </div>
+                <input type="text" placeholder="Phone number, username, or email" class="login-input">
+                <input type="password" placeholder="Password" class="login-input">
+                <button>Log in</button>
+                <div class="separator">
+                    <hr>
+                    <span>OR</span>
+                    <hr>
+                </div>
+                <button class="facebook-login"><img src="/img/facebook.png" alt="">&nbsp;Log in with Facebook</button>
+                <div class="pb-4"><a href="#" class="forgot-password">Forgot password?</a></div>
+            </div>
+            <div class="right-panel mt-2">
+                <div class="separator justify-content-center">
+                    <span class="fs-6">Don't have an account? <a><strong>Sign up</strong></a></span>
+                </div>
+            </div>
+            <div class="text-center pt-2">Get the app</div>
+            <div class="d-flex justify-content-center">
+                <div class="app-download">
+                    <img src="img/apple-store.webp" alt="App Store">
+                    <img src="img/google-playstore.webp" alt="Google Play">
+                </div>
+            </div>
+        </div>
+
     </div>
-    <div class="right-side">
-        <div class="right-panel">
-            <div>
-                <img src="./img/instagram.png" alt="" id="insta-text-image">
-            </div>
-<!--            <h1 style="font-family: 'Billabong', cursive; font-size: 40px;">Instagram</h1>-->
-            <input type="text" placeholder="Phone number, username, or email" class="fs-6">
-            <input type="password" placeholder="Password" class="fs-6">
-            <button>Log in</button>
-            <div class="separator">
-                <hr>
-                <span>OR</span>
-                <hr>
-            </div>
-            <button class="facebook-login"><img src="/img/facebook.png" alt="">&nbsp;Log in with Facebook</button>
-            <div class="pb-4"><a href="#" class="forgot-password">Forgot password?</a></div>
-        </div>
-        <div class="right-panel mt-2">
-            <div class="separator justify-content-center">
-                <span>Don't have an account? <a>Sign up</a></span>
-            </div>
-        </div>
-        <div class="text-center pt-2">Get the app</div>
-        <div class="d-flex justify-content-center">
-            <div class="app-download">
-                <img src="img/apple-store.webp" alt="App Store">
-                <img src="img/google-playstore.webp" alt="Google Play">
-            </div>
-        </div>
-    </div>
-    
-</div>
+</main>
 
 <div class="footer">
     <a href="#">Meta</a>
